added comments to css

--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 /* Setting Colour Pattle Variables */
+/*please use these vars instead of static colours*/
 :root {
     --primary-1: #BC0A0F;
     --promary-2: #201D1D;
@@ -7,9 +8,10 @@
     --highlight-1: #EEDB86;
     --background: #F8F5F2;
 
-    /* use example
-
-    background-color: var(--primary-1);
-
+    /* 
+    use example:
+    background-color: var(--background);
+    
+    This way we can change how the whole site looks simply by adjusting theses var's
     */
 }
