--- a/index.css
+++ b/index.css
@@ -1,17 +1,69 @@
 /* Setting Colour Pattle Variables */
 /*please use these vars instead of static colours*/
 :root {
-    --primary-1: #BC0A0F;
-    --promary-2: #201D1D;
-    --accent-1: #EDD256;
-    --accent-2: #EFC081;
-    --highlight-1: #EEDB86;
-    --background: #F8F5F2;
+  --primary-1: #bc0a0f;
+  --primary-2: #201d1d;
+  --accent-1: #edd256;
+  --accent-2: #efc081;
+  --highlight-1: #eedb86;
+  --background: #f8f5f2;
 
-    /* 
+  /* 
     use example:
     background-color: var(--background);
-    
+
     This way we can change how the whole site looks simply by adjusting theses var's
     */
+}
+body {
+  font-family: Arial;
+}
+
+#contentContainer {
+  width: auto;
+  height: auto;
+  margin: 15em 15em 15em 15em;
+  background-color: var(--background);
+}
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: var(--background);
+}
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+.tab button:hover {
+  background-color: var(--background);
+}
+.tab button.active {
+  background-color: var(--background);
+}
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
+#contentThumbnail {
+    box-shadow: 0.1em 0.1em 0.3em var(--primary-2);
+    margin: 0.1em; 
+    padding: 0.5em;
+    width: 16%;
+    height: 9%;
+    display: inline-block;
+    border-radius: 1em;
+    border-color: var(--promary-2);
+}
+#contentThumbnail img {
+    margin: 0.2em;
+    margin-top: 1em; 
+    width:100%;
 }
