fixing spelling error in primary var

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 /*please use these vars instead of static colours*/
 :root {
     --primary-1: #BC0A0F;
-    --promary-2: #201D1D;
+    --primary-2: #201D1D;
     --accent-1: #EDD256;
     --accent-2: #EFC081;
     --highlight-1: #EEDB86;
