--- a/index.css
+++ b/index.css
@@ -69,10 +69,13 @@ body {
     padding: 0.75em;
 }
 #contentThumbnail img {
-    width:100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height:12.5em;
     border-radius: 0.5em;
 }
 #contentThumbnail p {
     text-align: center;
-    margin: 0.1em;
+    margin: 0.3em;
 }
